# integrated-manager-for-lustre

./: .dockerignore  .editorconfig  .gitignore  .gitlint  .gitmodules  .jshintrc  .rusty-hook.toml  .travis.yml  10-device-aggregator.service.conf  10-rabbitmq-server.service.conf  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Makefile.build  Makefile.deb  Makefileold-top-level  NOTICE  Pipfile  README  README.md  README.txt  Target  Vagrantfile  agent-bootstrap-script.template  azure-pipelines.yml  base.dockerfile  base.dockerfile.dockerignore  base.repo.in  base_managed_RH7.profile  base_managed_ib_RH7.profile  base_managed_patchless.profile  base_monitored.profile  bootstrap.conf  chroma-config.1  chroma-host-discover  chroma-manager.conf.template  chroma-manager.py  chroma-service-init.sh  (+152 more)
emf-action-client/: Cargo.toml
emf-action-client/src/: lib.rs
emf-agent/: Cargo.toml  README.md
emf-agent-comms/: Cargo.toml
emf-agent-comms/src/: error.rs  flush_queue.rs  host.rs  lib.rs  main.rs  messaging.rs  session.rs
emf-agent/src/: agent_error.rs  cli.rs  device_scanner_client.rs  env.rs  fidlist.rs  high_availability.rs  lib.rs  lustre.rs  main.rs  network_interface.rs  network_interface_stats.rs  network_interfaces.rs  poller.rs  reader.rs  rpm.rs  server_properties.rs  util.rs
emf-agent/src/action_plugins/: action_plugin.rs  check_kernel.rs  check_stonith.rs  firewall_cmd.rs  kernel_module.rs  lamigo.rs  ldev.rs  lpurge.rs  mod.rs  ostpool.rs  package.rs  postoffice.rs
emf-agent/src/daemon_plugins/: action_runner.rs  corosync.rs  daemon_plugin.rs  device.rs  journal.rs  mod.rs  network.rs  ntp.rs  ostpool.rs  postoffice.rs  snapshot.rs  stats.rs
emf-agent/src/fixtures/: corosync_cfgtool_fixture.txt  es_ban_fixture.xml  es_fixture.xml  es_lustre_resource_mounts_fixture.txt  network_interfaces2.txt  network_stats2.txt  vagrant_fixture.xml  vagrant_stopped_fixture.xml
emf-agent/src/http_comms/: agent_client.rs  crypto_client.rs  mod.rs  session.rs  streaming_client.rs
emf-agent/src/services/: action-agent.rs  corosync-agent.rs  device-agent.rs  host-agent.rs  journal-agent.rs  network-agent.rs  network-ib-agent.rs  ntp-agent.rs  ostpool-agent.rs  postoffice-agent.rs  snapshot-agent.rs  stats-agent.rs
emf-agent/src/snapshots/: emf_agent__high_availability__tests__local_nodeid_output.snap  emf_agent__high_availability__tests__lustre_resource_mounts_output.snap  emf_agent__high_availability__tests__read_es.snap  (+6 more)
emf-agent/systemd-units/: 00-rust-emf-agent.preset  emf-action-agent.service  emf-agent.target  emf-corosync-agent.service  emf-device-agent.service  emf-host-agent.service  emf-journal-agent.service  emf-network-agent.service  emf-network-ib-agent.service  emf-ntp-agent.service  emf-ostpool-agent.service  emf-postoffice-agent.service  emf-snapshot-agent.service  emf-stats-agent.service  rust-emf-agent.path  rust-emf-agent.service  settings.conf  tmpfiles.conf
emf-api/: Cargo.toml
emf-api-utils/: Cargo.toml
emf-api-utils/src/: lib.rs
emf-api/src/: action.rs  command.rs  error.rs  main.rs  timer.rs
emf-cmd/: Cargo.toml
emf-cmd/src/: lib.rs
emf-command-utils/: Cargo.toml
emf-command-utils/src/: lib.rs
emf-exa-parser/: Cargo.toml  README.md
emf-exa-parser/fixtures/: exascaler_ai400x.conf  exascaler_ai400x.json  exascaler_notvalid.conf  exascaler_zpool.conf
emf-exa-parser/src/: config.rs  extract_exa_json.py  lib.rs
emf-exa-parser/tests/: integration-tests.rs
emf-fs/: Cargo.toml
emf-fs/src/: lib.rs
emf-graphql-queries/: Cargo.toml
emf-graphql-queries/src/: alert.rs  client_mount.rs  filesystem.rs  host.rs  lib.rs  log.rs  ostpool.rs  server_profile.rs  snapshot.rs  state_machine.rs  stratagem.rs  target.rs  task.rs
emf-influx/: Cargo.toml
emf-influx/src/: filesystem.rs  filesystems.rs  lib.rs
emf-lib-state-machine/: Cargo.toml
emf-lib-state-machine/fixtures/: deploy-hosts.yml
emf-lib-state-machine/src/: lib.rs  state_schema.rs
emf-mailbox/: Cargo.toml
emf-mailbox/src/: lib.rs  main.rs
emf-manager-cli/: Cargo.toml
emf-manager-cli/fixtures/: kuma-service-insights.json  needs-plan.json
emf-manager-cli/src/: alert.rs  api.rs  api_utils.rs  command.rs  command_utils.rs  config-main.rs  config_utils.rs  consul.rs  display_utils.rs  error.rs  filesystem.rs  grafana.rs  health.rs  host.rs  influx.rs  kuma.rs  lib.rs  main.rs  nginx.rs  ostpool.rs  postgres.rs  profile.rs  run.rs  server.rs  snapshot.rs  ssh.rs  stratagem.rs  target.rs  update_repo_file.rs
emf-manager-client/: Cargo.toml
emf-manager-client/src/: lib.rs
emf-postgres/: Cargo.toml
emf-postgres/src/: alert.rs  lib.rs
emf-rabbit/: Cargo.toml
emf-rabbit/src/: lib.rs
emf-report/: Cargo.toml
emf-report/src/: lib.rs  main.rs
emf-request-retry/: Cargo.toml
emf-request-retry/examples/: demo-server-client.rs
emf-request-retry/src/: lib.rs  policy.rs
emf-sfa/: Cargo.toml
emf-sfa/src/: lib.rs  main.rs  sfa_class_ext.rs
emf-ssh/: Cargo.toml
emf-ssh/src/: lib.rs
emf-ssh/tests/: common.rs  integration_test.rs
emf-state-machine/: Cargo.toml
emf-state-machine/fixtures/: deploy-hosts.yml
emf-state-machine/src/: action_runner.rs  command_plan.rs  executor.rs  input-document-schema.json  input_document.rs  lib.rs  main.rs  state-schema-schema.json  state-schema.yml  state_schema.rs  transition_graph.rs
emf-state-machine/systemd-units/: emf-state-machine.service
emf-system-docker-tests/: Cargo.toml  README.md
emf-system-docker-tests/tests/: ldiskfs_test.rs  stratagem_test.rs
emf-system-rpm-tests/: Cargo.toml  README.md
emf-system-rpm-tests/src/: lib.rs
emf-system-rpm-tests/tests/: ldiskfs_test.rs  stratagem_test.rs
emf-system-test-utils/: Cargo.toml  README.md
emf-system-test-utils/src/: lib.rs  snapshots.rs  ssh.rs  vagrant.rs
emf-systemd/: Cargo.toml
emf-systemd/src/: lib.rs  systemd_error.rs
emf-task-runner/: Cargo.toml  README.md
emf-task-runner/src/: error.rs  main.rs
emf-timer/: Cargo.toml
emf-timer/src/: config.rs  error.rs  lib.rs  main.rs
emf-util/: Cargo.toml  util.rs
(+7254 files in other folders)
