[workspace]
members = [
  'iml-action-client',
  'iml-agent-comms',
  'iml-agent',
  'iml-api-utils',
  'iml-api',
  'iml-change',
  'iml-cmd',
  'iml-command-utils',
  'iml-fs',
  'iml-graphql-queries',
  'iml-influx',
  'iml-job-scheduler-rpc',
  'iml-mailbox',
  'iml-manager-cli',
  'iml-manager-client',
  'iml-manager-env',
  'iml-postgres',
  'iml-rabbit',
  'iml-report',
  'iml-request-retry',
  'iml-services/iml-action-runner',
  'iml-services/iml-corosync',
  'iml-services/iml-device',
  'iml-services/iml-journal',
  'iml-services/iml-journal',
  'iml-services/iml-network',
  'iml-services/iml-ntp',
  'iml-services/iml-ostpool',
  'iml-services/iml-postoffice',
  'iml-services/iml-service-queue',
  'iml-services/iml-snapshot',
  'iml-services/iml-stats',
  'iml-sfa',
  'iml-state-machine',
  'iml-system-test-utils',
  'iml-systemd',
  'iml-task-runner',
  'iml-timer',
  'iml-tracing',
  'iml-util',
  'iml-warp-drive',
  'iml-wire-types',
  'liblustreapi-types',
  'liblustreapi',
  'number-formatter',
  'tokio-runtime-shutdown',
  'version-utils',
  'wbem-client',
]

exclude = [
  'device-scanner',
  'iml-gui/crate',
  'iml-system-docker-tests',
  'iml-system-rpm-tests',
]
