[workspace]
members = [
  'emf-action-client',
  'emf-agent-comms',
  'emf-agent',
  'emf-api-utils',
  'emf-api',
  'emf-change',
  'emf-cmd',
  'emf-command-utils',
  'emf-fs',
  'emf-graphql-queries',
  'emf-influx',
  'emf-job-scheduler-rpc',
  'emf-mailbox',
  'emf-manager-cli',
  'emf-manager-client',
  'emf-manager-env',
  'emf-postgres',
  'emf-rabbit',
  'emf-report',
  'emf-request-retry',
  'emf-services/emf-action-runner',
  'emf-services/emf-corosync',
  'emf-services/emf-device',
  'emf-services/emf-journal',
  'emf-services/emf-journal',
  'emf-services/emf-network',
  'emf-services/emf-ntp',
  'emf-services/emf-ostpool',
  'emf-services/emf-postoffice',
  'emf-services/emf-service-queue',
  'emf-services/emf-snapshot',
  'emf-services/emf-stats',
  'emf-sfa',
  'emf-ssh',
  'emf-system-test-utils',
  'emf-systemd',
  'emf-task-runner',
  'emf-timer',
  'emf-tracing',
  'emf-util',
  'emf-warp-drive',
  'emf-wire-types',
  'liblustreapi-types',
  'liblustreapi',
  'number-formatter',
  'tokio-runtime-shutdown',
  'version-utils',
  'wbem-client',
]

exclude = [
  'device-scanner',
  'emf-gui/crate',
  'emf-system-docker-tests',
  'emf-system-rpm-tests',
]
