[workspace]
members = [
  'emf-action-client',
  'emf-agent',
  'emf-api-utils',
  'emf-api',
  'emf-change',
  'emf-cmd',
  'emf-command-utils',
  'emf-exa-parser',
  'emf-fs',
  'emf-graphql-queries',
  'emf-influx',
  'emf-lib-state-machine',
  'emf-mailbox',
  'emf-manager-cli',
  'emf-manager-client',
  'emf-manager-env',
  'emf-postgres',
  'emf-report',
  'emf-request-retry',
  'emf-services/emf-corosync',
  'emf-services/emf-device',
  'emf-services/emf-host',
  'emf-services/emf-journal',
  'emf-services/emf-network',
  'emf-services/emf-ntp',
  'emf-services/emf-ostpool',
  'emf-services/emf-service-queue',
  'emf-services/emf-snapshot',
  'emf-services/emf-stats',
  'emf-sfa',
  'emf-ssh',
  'emf-state-machine',
  'emf-system-test-utils',
  'emf-systemd',
  'emf-task-runner',
  'emf-timer',
  'emf-tracing',
  'emf-util',
  'emf-warp-drive',
  'emf-wire-types',
  'liblustreapi-types',
  'liblustreapi',
  'number-formatter',
  'tokio-runtime-shutdown',
  'version-utils',
  'wbem-client',
]
resolver = "2"

exclude = [
  'device-scanner',
  'emf-gui/crate',
  'emf-system-rpm-tests',
]

[profile.dev]
split-debuginfo = "unpacked"
