[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-action-client"
version = "0.1.0"

[dependencies]
bytes = "0.5"
futures = "0.3"
hyper = {version = "0.13", default-features = false, features = ["tcp"]}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
# this can be used once hyperlocal#36 lands
#hyperlocal = { version = "0.7", features = [ "client" ], default_features = false }
hyperlocal = {version = "0.7"}
reqwest = {version = "0.10", default-features = false, features = ["rustls-tls", "json", "stream"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
