[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-action-client"
version = "0.1.0"

[dependencies]
futures = "0.3"
hyper = {version = "0.14", default-features = false, features = ["tcp", "client", "http2"]}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
hyperlocal = { version = "0.8", features = [ "client" ], default_features = false }
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
