[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-agent-comms"
version = "0.4.0"

[dependencies]
futures = "0.3"
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-rabbit = {path = "../emf-rabbit", version = "0.4", features = ["warp-filters"]}
emf-tracing = {version = "0.3", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["rt-threaded"]}
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
warp = "0.2"
