[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "Core library for EXAScaler Management Framework Agent"
edition = "2018"
license = "MIT"
name = "emf-agent"
repository = "https://github.com/whamcloud/exascaler-management-framework/tree/master/emf-agent"
version = "0.4.0"

[dependencies]
async-trait = "0.1"
byte-unit = "=2.1"
bytes = "0.5"
chrono = "0.4"
combine = "=4.1.0"
console = "0.12"
device-types = {path = "../device-scanner/device-types", version = "0.3.0"}
dns-lookup = "1"
dotenv = "0.15"
dyn-clone = "1"
elementtree = "0.5"
exitcode = "1.1"
futures = "0.3"
http = "0.2"
emf-cmd = {path = "../emf-cmd", version = "0.4.0"}
emf-fs = {path = "../emf-fs", version = "0.4.0"}
emf-systemd = {path = "../emf-systemd", version = "0.4.0"}
emf-tracing = {version = "0.3", path = "../emf-tracing"}
emf-util = {path = "../emf-util", version = "0.4.0"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4", features = ["cli"]}
inotify = "0.8"
ipnetwork = "0.17"
lazy_static = "1.4.0"
libc = "0.2"
liblustreapi = {path = "../liblustreapi", version = "0.4"}
lustre_collector = "0.2.16"
prettytable-rs = "0.8"
quick-xml = {version = "0.18", features = ["serialize"]}
reqwest = {version = "0.10", default-features = false, features = ["rustls-tls", "json", "stream"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
spinners = "1.2"
stream-cancel = "0.6"
strfmt = "0.1.6"
structopt = "0.3"
thiserror = "1.0"
tokio = {version = "0.2", features = ["fs", "io-util", "process", "macros", "net", "rt-threaded"]}
tokio-util = {version = "0.3", features = ["codec"]}
tracing = "0.1"
url = "2.1"
uuid = {version = "0.8", features = ["v4"]}
v_hist = "0.1.2"
version-utils = {path = "../version-utils", version = "0.2.0"}

[dependencies.regex]
default-features = false
features = ["std"]
version = "1.3"

[dev-dependencies]
insta = "1"
mockito = "0.27"
tempfile = "3.1.0"
tokio = {version = "0.2", features = ["rt-threaded"]}

[[bin]]
name = "emf-agent-daemon"
path = "src/main.rs"

[[bin]]
name = "emf-agent"
path = "src/cli.rs"
