[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-api"
version = "0.4.0"

[dependencies]
chrono = "0.4"
futures = "0.3"
humantime = "2.0"
emf-job-scheduler-rpc = {path = "../emf-job-scheduler-rpc", version = "0.4"}
emf-manager-client = {path = "../emf-manager-client", version = "0.4"}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-postgres = {path = "../emf-postgres", version = "0.4"}
emf-rabbit = {path = "../emf-rabbit", version = "0.4", features = ["warp-filters"]}
emf-tracing = {version = "0.3", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4", features = ["graphql", "postgres-interop"]}
itertools = "0.9"
juniper = "0.15"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "0.2", features = ["macros", "rt-threaded"]}
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
warp = "0.2"

[dependencies.regex]
default-features = false
features = ["std"]
version = "1.4"
