[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-cmd"
version = "0.4.0"

[dependencies]
futures = "0.3"
thiserror = "1.0"
tokio = {version = "1", features = ["process", "rt-multi-thread"]}
tracing = "0.1"
warp = {version = "0.3", optional = true}

[features]
warp-errs = ["warp"]
