[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-command-utils"
version = "0.4.0"

[dependencies]
futures = "0.3"
emf-manager-client = {path = "../emf-manager-client", version = "0.4"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "io-std", "io-util", "fs", "rt-multi-thread"]}
