[package]
name = "exa_parser"
version = "0.1.0"
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"

[dev-dependencies]
insta = "1.5.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1", features = ["process", "rt-multi-thread", "macros"]}
emf-cmd = {path = "../emf-cmd", version = "0.4.0"}
serde_json = "1.0"
thiserror = "1.0"
