[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-fs"
version = "0.4.0"

[dependencies]
bytes = "1"
emf-cmd = {version = "0.4", path = "../emf-cmd"}
futures = "0.3"
tempfile = "3.1"
tokio = {version = "1", features = ["fs", "io-util", "net", "rt", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["fs"]}
tokio-util = {version = "0.6", features = ["codec"]}

[dev-dependencies]
tempdir = "0.3"
tokio = {version = "1", features = ["macros"]}
