[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-graphql-queries"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.0"
emf-wire-types = {version = "0.4", path = "../emf-wire-types"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
