[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "Shared functions and data types related to influx"
edition = "2018"
name = "emf-influx"
version = "0.2.0"

[dependencies]
futures = {version = "0.3", optional = true}
influx_db_client = {version = "0.4", default-features = false, features = ["rustls-tls"], optional = true}
serde = {version = "1", features = ['derive']}
serde_json = {version = "1"}
thiserror = {version = "1.0", optional = true}

[dev-dependencies]
influx_db_client = {version = "0.4", default-features = false, features = ["rustls-tls"]}

[features]
with-db-client = ["influx_db_client", "futures", "thiserror"]
