[package]
authors = ["IML Team <iml@whamcloud.com>"]
edition = "2018"
name = "emf-lib-state-machine"
version = "0.1.0"

[dependencies]
emf-ssh = {path = "../emf-ssh", version = "0.1", optional = true}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
humantime-serde = "1.0"
maplit = "1"
once_cell = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
serde_path_to_error = "0.1"
serde_yaml = "0.8"
thiserror = "1.0"
validator = {version = "0.13", features = ["derive"]}

[dev-dependencies]
insta = "1"

[features]
ssh-conversions = ["emf-ssh"]
