[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-mailbox"
version = "0.4.0"

[dependencies]
bytes = "1"
futures = "0.3"
emf-fs = {path = "../emf-fs", version = "0.4"}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-postgres = {path = "../emf-postgres", version = "0.4"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4", features = ["postgres-interop"]}
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["json", "offline", "postgres", "runtime-tokio-rustls", "chrono"]}
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
warp = "0.3"

[dev-dependencies]
tempdir = "0.3"
