[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-manager-cli"
version = "0.4.0"

[dependencies]
chrono = "0.4"
chrono-humanize = "0.1.2"
combine = "=4.1.0"
console = "0.11"
dialoguer = "0.6"
dotenv = "0.15"
emf-api-utils = {path = "../emf-api-utils", version = "0.4"}
emf-cmd = {path = "../emf-cmd", version = "0.4"}
emf-command-utils = {path = "../emf-command-utils", version = "0.4"}
emf-fs = {path = "../emf-fs", version = "0.4"}
emf-graphql-queries = {path = "../emf-graphql-queries", version = "0.2"}
emf-influx = {path = "../emf-influx", version = "0.2"}
emf-manager-client = {path = "../emf-manager-client", version = "0.4"}
emf-request-retry = {path = "../emf-request-retry", version = "0.4.0"}
emf-systemd = {path = "../emf-systemd", version = "0.4"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4", features = ["cli"]}
futures = "0.3"
hostlist-parser = "0.1.3"
indicatif = "0.15"
lazy_static = "1.4"
liblustreapi = {path = "../liblustreapi", version = "0.4"}
nix = "0.20"
number-formatter = {path = "../number-formatter", version = "0.2"}
prettytable-rs = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "io-std", "io-util", "fs", "rt-multi-thread"]}
tracing = "0.1"

[dependencies.regex]
default-features = false
features = ["std"]
version = "1.3"

[dev-dependencies]
insta = "1"

[[bin]]
name = "emf"
path = "src/main.rs"

[[bin]]
name = "emf-config"
path = "src/config-main.rs"
