[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-rabbit"
version = "0.4.0"

[dependencies]
deadpool-lapin = {version = "=0.6.0", default-features = false}
futures = "0.3"
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
lapin = {version = "=1.2.8", default-features = false, features = ["rustls"]}
serde_json = "1"
thiserror = "1.0"
tokio-amqp = {version = "0.1", default-features = false}
tracing = "0.1"
warp = {version = "0.2", optional = true}

[dev-dependencies]
tokio = {version = "0.2", features = ["macros", "rt-threaded"]}
warp = "0.2"

[features]
warp-filters = ["warp"]
