[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "EMF async request retry Library"
edition = "2018"
name = "emf-request-retry"
version = "0.4.0"

[dependencies]
futures = "0.3"
rand = "0.7"
tokio = {version = "0.2", features = ["macros"]}
tracing = "0.1"

[dev-dependencies]
http = "0.2"
rand_xorshift = "0.2.0"
reqwest = {version = "0.10", default-features = false, features = ["json"]}
serde = {version = "1", features = ['derive']}
serde_json = "1.0"
tokio-test = "0.2"
url = "2.1"
warp = "0.2"

[[example]]
name = "demo-server-client"
path = "examples/demo-server-client.rs"
