[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "EMF async request retry Library"
edition = "2018"
name = "emf-request-retry"
version = "0.4.0"

[dependencies]
futures = "0.3"
rand = "0.8"
rand_xoshiro = "0.6.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"

[dev-dependencies]
http = "0.2"
once_cell = "1.5.2"
reqwest = {version = "0.11", default-features = false, features = ["json"]}
serde = {version = "1", features = ['derive']}
serde_json = "1.0"
tokio-test = "0.4"
url = "2.1"
warp = "0.3"

[[example]]
name = "demo-server-client"
path = "examples/demo-server-client.rs"
