[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-ssh"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
dirs = "3"
futures = "0.3"
emf-fs = {version = "0.4", path = "../emf-fs"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
thiserror = "1.0"
thrussh = "0.32"
thrussh-keys = "0.20"
tokio = {version = "1", features = ["fs"]}
