[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-state-machine"
version = "0.1.0"

[dependencies]
bytes = "1.0"
chrono = "0.4"
emf-lib-state-machine = {path = "../emf-lib-state-machine", version = "0.1", features = ["ssh-conversions"]}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-postgres = {path = "../emf-postgres", version = "0.4"}
emf-ssh = {path = "../emf-ssh", version = "0.1"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
futures = "0.3"
humantime-serde = "1.0"
once_cell = "1.5"
petgraph = {version = "0.5", features = ["serde-1"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
serde_yaml = "0.8"
sqlx = {version = "0.5", features = ["json", "offline", "postgres", "runtime-tokio-rustls", "chrono"]}
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "time"]}
tokio-stream = {version = "0.1", features = ["net"]}
tokio-util = {version = "0.6", features = ["io"]}
uuid = {version = "0.8", features = ["v4"]}
validator = {version = "0.13", features = ["derive"]}
warp = "0.3"

[dev-dependencies]
emf-postgres = {path = "../emf-postgres", version = "0.4", features = ["test"]}
insta = "1"
