[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-system-rpm-tests"
version = "0.4.0"

[dependencies]
emf-cmd = {version = "0.4", path = "../emf-cmd"}
emf-system-test-utils = {version = "0.4", path = "../emf-system-test-utils"}
emf-wire-types = {version = "0.4", path = "../emf-wire-types"}
tokio = {version = "0.2", features = ["macros", "rt-threaded"]}
tracing = "0.1"
tracing-subscriber = "0.2"
