[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "EMF Systemd Library"
edition = "2018"
license = "MIT"
name = "emf-systemd"
version = "0.4.0"

[dependencies]
futures = "0.3"
emf-cmd = {path = "../emf-cmd", version = "0.4"}
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
serde = {version = "1", features = ['derive']}
serde_json = "1.0"
tokio = {version = "1", features = ["net", "time"]}
tracing = "0.1"
