[package]
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2018"
name = "emf-timer"
version = "0.4.0"

[dependencies]
futures = "0.3"
emf-cmd = {path = "../emf-cmd", version = "0.4", features = ["warp-errs"]}
emf-manager-env = {path = "../emf-manager-env", version = "0.4"}
emf-tracing = {version = "0.4", path = "../emf-tracing"}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["process", "macros"]}
warp = "0.3"
