[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "EMF Util Library"
edition = "2018"
license = "MIT"
name = "emf-util"
version = "0.4.0"

[dependencies]
futures = "0.3"
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
serde = {version = "1", features = ['derive']}
serde_json = "1.0"
tokio = {version = "0.2", features = ["net", "stream"]}
tracing = "0.1"

[lib]
path = "util.rs"
