[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "EMF Util Library"
edition = "2018"
license = "MIT"
name = "emf-util"
version = "0.4.0"

[dependencies]
emf-wire-types = {path = "../emf-wire-types", version = "0.4"}
futures = "0.3"
serde = {version = "1", features = ['derive']}
serde_json = "1.0"

[lib]
path = "util.rs"
